compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__let_1.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1005
expression: "\npub fn main(x) {\n  let True = x\n  0\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  let True = x
  0
}


----- ERROR
error: Inexhaustive pattern
  ┌─ /src/one/two.gleam:3:3
  │
3 │   let True = x
  │   ^^^^^^^^^^^^

This assignment uses a pattern that does not match all possible values. If
one of the other values is used then the assignment will crash.

The missing patterns are:

    False

Hint: Use a more general pattern or use `let assert` instead.
