compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__list_one_two.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 334
expression: "\npub fn main(x) {\n  case x {\n    [_] -> 1\n    [_, _] -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    [_] -> 1
    [_, _] -> 1
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:3:3
  │  
3 │ ╭   case x {
4 │ │     [_] -> 1
5 │ │     [_, _] -> 1
6 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    []
    [_, _, _, ..]
